--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   font-family: "Noto Sans", sans-serif;
 }
 
-.App-content {
-  height: calc(100vh - 56px);
+.App {
+  margin: 5%;
 }
 
 @keyframes fade-in {
